# Scholar-R500

./: README.md
scholar_r500_base/scholar_r500_base_driver/: package.xml
scholar_r500_base/scholar_r500_base_driver/include/: scholar_r500.h
scholar_r500_base/scholar_r500_base_driver/launch/: scholar_r500_base_bringup.launch
scholar_r500_base/scholar_r500_base_driver/msg/: scholar_r500_battery.msg
scholar_r500_base/scholar_r500_base_driver/src/: scholar_r500_bringup.cpp  scholar_r500_driver.cpp
scholar_r500_base/scholar_r500_description/: CMakeLists.txt  package.xml
scholar_r500_base/scholar_r500_description/config/: husky.rviz  robot.rviz
scholar_r500_base/scholar_r500_description/launch/: display.launch
scholar_r500_base/scholar_r500_description/urdf/: scholar_r500_description.xacro
scholar_r500_base/scholar_r500_imu_bringup/: CMakeLists.txt  package.xml
scholar_r500_base/scholar_r500_imu_bringup/include/: imu.h
scholar_r500_base/scholar_r500_imu_bringup/launch/: scholar_r500_imu_bringup.launch
scholar_r500_base/scholar_r500_imu_bringup/src/: imu.cpp  imu_driver.cpp
scholar_r500_base/scholar_r500_imu_bringup/udev/: imu.rules
scholar_r500_base/scholar_teleop/: CMakeLists.txt  package.xml
scholar_r500_base/scholar_teleop/include/: scholar_teleop.h
scholar_r500_base/scholar_teleop/launch/: scholar_teleop.launch
scholar_r500_base/scholar_teleop/src/: scholar_teleop.cpp  scholar_teleop_bringup.cpp
scholar_r500_base_driver/: CMakeLists.txt
scholar_r500_base_driver/src/: scholar_r500_driver.cpp
scholar_r500_base_driver/udev/: scholar_r500.rules
scholar_r500_navigation/scholar_r500_navigation/: CMakeLists.txt  package.xml
scholar_r500_navigation/scholar_r500_navigation/config/: base_local_planner_params.yaml  common_params.yaml  global_costmap_params_map.yaml  global_planner_params.yaml  gmapping_localization.yaml  local_costmap_params.yaml  planner.yaml  slam_localization.yaml  yocs_velocity_smoother.yaml
scholar_r500_navigation/scholar_r500_navigation/include/: dual_laser_listener.h
scholar_r500_navigation/scholar_r500_navigation/launch/: amcl.launch  bring_up.launch  g4_laser_bringup.launch  gmapping.launch  gmapping_demo_with_ekf.launch  move_base.launch  move_base_demo.launch  scholar_gmapping.launch  scholar_gmapping_with_ekf.launch
scholar_r500_navigation/scholar_r500_navigation/map/: map.pgm  map.yaml
scholar_r500_navigation/scholar_r500_navigation/src/: dual_laser_listener.cpp  laser_to_cloud.cpp
scholar_r500_navigation/scholar_r500_navigation/udev/: front_laser.rules  rear_laser.rules
