<?xml version="1.0"?>
<package format="2">
  <name>scholar_r500_navigation</name>
  <version>0.0.0</version>
  <description>The scholar_r500_navigation package</description>

  <maintainer email="support@verma-robot.com">scholar</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>teb_local_planner</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>ydlidar</build_depend>
  <build_depend>yocs_velocity_smoother</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>pointcloud_to_laserscan</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>teb_local_planner</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>ydlidar</build_export_depend>
  <build_export_depend>velocity</build_export_depend>
  <build_export_depend>yocs_velocity_smoother</build_export_depend>
  <build_export_depend>laser_geometry</build_export_depend>
  <build_export_depend>pointcloud_to_laserscan</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>ydlidar</exec_depend>
  <exec_depend>yocs_velocity_smoother</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
